đổi thư mục test

--- a/aspnet-core/test/public/PetProjectEcommerce.Application.Tests/PetProjectEcommerce.Application.Tests.csproj
+++ b/aspnet-core/test/public/PetProjectEcommerce.Application.Tests/PetProjectEcommerce.Application.Tests.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <Import Project="..\..\common.props" />
+  <Import Project="..\..\..\common.props" />
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,7 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PetProjectEcommerce.EntityFrameworkCore.Tests\PetProjectEcommerce.EntityFrameworkCore.Tests.csproj" />
+    <ProjectReference Include="..\..\..\src\public\PetProjectEcommerce.Application\PetProjectEcommerce.Application.csproj" />
+    <ProjectReference Include="..\..\shared\PetProjectEcommerce.Domain.Tests\PetProjectEcommerce.Domain.Tests.csproj" />
   </ItemGroup>
 
   <ItemGroup>
