--- a/aspnet-core/test/public/PetProjectEcommerce.HttpApi.Client.ConsoleTestApp/PetProjectEcommerce.HttpApi.Client.ConsoleTestApp.csproj
+++ b/aspnet-core/test/public/PetProjectEcommerce.HttpApi.Client.ConsoleTestApp/PetProjectEcommerce.HttpApi.Client.ConsoleTestApp.csproj
@@ -29,7 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\public\PetProjectEcommerce.HttpApi.Client\PetProjectEcommerce.HttpApi.Client.csproj" />
+    <ProjectReference Include="..\..\..\src\public\PetProjectEcommerce.HttpApi.Client\PetProjectEcommerce.HttpApi.Client.csproj" />
   </ItemGroup>
 
 </Project>
