--- a/aspnet-core/test/shared/PetProjectEcommerce.EntityFrameworkCore.Tests/PetProjectEcommerce.EntityFrameworkCore.Tests.csproj
+++ b/aspnet-core/test/shared/PetProjectEcommerce.EntityFrameworkCore.Tests/PetProjectEcommerce.EntityFrameworkCore.Tests.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <Import Project="..\..\common.props" />
+  <Import Project="..\..\..\common.props" />
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\common\infrastructure\PetProjectEcommerce.EntityFrameworkCore\PetProjectEcommerce.EntityFrameworkCore.csproj" />
+    <ProjectReference Include="..\..\..\src\common\infrastructure\PetProjectEcommerce.EntityFrameworkCore\PetProjectEcommerce.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\PetProjectEcommerce.TestBase\PetProjectEcommerce.TestBase.csproj" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore.Sqlite" Version="6.0.2" />
   </ItemGroup>
