Revert "tích hợp autrhentication với openiddict"
This reverts commit da727b0bdffa2b0350bbfcfa962df1a59ee5a184.

--- a/aspnet-core/src/admin/PetProjectEcommerce.Admin.HttpApi.Host/Properties/launchSettings.json
+++ b/aspnet-core/src/admin/PetProjectEcommerce.Admin.HttpApi.Host/Properties/launchSettings.json
@@ -3,15 +3,22 @@
     "windowsAuthentication": false, 
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "https://localhost:5001",
-      "sslPort": 5001
+      "applicationUrl": "https://localhost:44336",
+      "sslPort": 44336
     }
   },
   "profiles": {
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
     "PetProjectEcommerce.HttpApi.Host": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001",
+      "applicationUrl": "https://localhost:44336",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
