--- a/aspnet-core/src/auth/PetProjectEcommerce.AuthServer/Properties/launchSettings.json
+++ b/aspnet-core/src/auth/PetProjectEcommerce.AuthServer/Properties/launchSettings.json
@@ -3,15 +3,22 @@
     "windowsAuthentication": false, 
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "https://localhost:5000",
-      "sslPort": 5000
+      "applicationUrl": "https://localhost:44354",
+      "sslPort": 44354
     }
   },
   "profiles": {
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
     "PetProjectEcommerce.AuthServer": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5000",
+      "applicationUrl": "https://localhost:44354",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
