Revert "Revert "tích hợp autrhentication với openiddict""

--- a/aspnet-core/src/common/infrastructure/PetProjectEcommerce.DbMigrator/appsettings.json
+++ b/aspnet-core/src/common/infrastructure/PetProjectEcommerce.DbMigrator/appsettings.json
@@ -12,8 +12,12 @@
       "PetProjectEcommerce_Admin": {
         "ClientId": "PetProjectEcommerce_Admin",
         "ClientSecret": "1q2w3e*",
-        "RootUrl": "http://localhost:5001"
+        "RootUrl": "http://localhost:4200"
+      },
+      "PetProjectEcommerce_Admin_Swagger": {
+        "ClientId": "PetProjectEcommerce_Admin_Swagger",
+        "RootUrl": "https://localhost:5001"
       }
-     }
+    }
   }
 }
