--- a/aspnet-core/src/admin/PetProjectEcommerce.Admin.HttpApi.Host/appsettings.json
+++ b/aspnet-core/src/admin/PetProjectEcommerce.Admin.HttpApi.Host/appsettings.json
@@ -3,7 +3,7 @@
     "CorsOrigins": "https://*.PetProjectEcommerce.com,http://localhost:4200"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=PetProjectEcommerce;Trusted_Connection=True"
+    "Default": "Server=.;Database=PetProjectEcommerce;Trusted_Connection=True"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
