--- a/aspnet-core/src/common/infrastructure/PetProjectEcommerce.DbMigrator/appsettings.json
+++ b/aspnet-core/src/common/infrastructure/PetProjectEcommerce.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=PetProjectEcommerce;Trusted_Connection=True"
+    "Default": "Server=.;Database=PetProjectEcommerce;Trusted_Connection=True"
   },
   "OpenIddict": {
     "Applications": {
