--- a/angular/package.json
+++ b/angular/package.json
@@ -30,12 +30,13 @@
     "@angular/platform-browser-dynamic": "^14.2.1",
     "@angular/router": "^14.2.1",
     "bootstrap-icons": "~1.8.3",
-    "rxjs": "7.5.6",
-    "tslib": "^2.1.0",
-    "zone.js": "~0.11.4",
     "primeflex": "^3.2.0",
     "primeicons": "6.0.1",
-    "primeng": "14.2.2"
+    "primeng": "14.2.2",
+    "quill": "^1.3.7",
+    "rxjs": "7.5.6",
+    "tslib": "^2.1.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@abp/ng.schematics": "~6.0.2",
